en /dashboard-admin/upgrade verifica la traduccion a español en archivos

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,129 @@
+
 {
+    "Dine-in": "Dine-in",
+    "Takeout": "Takeout",
+    "Dashboard": "Dashboard",
+    "Orders": "Orders",
+    "Menu & Recipes": "Menu & Recipes",
+    "Staff": "Staff",
+    "Inventory": "Inventory",
+    "Kitchen": "Kitchen",
+    "Reports": "Reports",
+    "Digital Map": "Digital Map",
+    "Settings": "Settings",
     "Billing": "Billing",
+    "Toggle navigation menu": "Toggle navigation menu",
+    "Toggle user menu": "Toggle user menu",
+    "My Account": "My Account",
+    "Theme": "Theme",
+    "Light": "Light",
+    "Dark": "Dark",
+    "System": "System",
+    "Language": "Language",
+    "Change Password": "Change Password",
+    "Log out": "Log out",
+    "Enter your new password below. After saving, you will be logged out for security.": "Enter your new password below. After saving, you will be logged out for security.",
+    "New Password": "New Password",
+    "Confirm Password": "Confirm Password",
+    "Cancel": "Cancel",
+    "Save Changes": "Save Changes",
+    "Error": "Error",
+    "Passwords do not match.": "Passwords do not match.",
+    "Password must be at least 6 characters long.": "Password must be at least 6 characters long.",
+    "Success": "Success",
+    "Password updated successfully.": "Password updated successfully.",
+    "Error updating password": "Error updating password",
+    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.",
+    "Administrator Dashboard": "Administrator Dashboard",
+    "Manage your restaurant's operations.": "Manage your restaurant's operations.",
+    "Modules": "Modules",
+    "Master Admin Dashboard": "Master Admin Dashboard",
+    "Welcome to the Tlacualli main control panel.": "Welcome to the Tlacualli main control panel.",
+    "Registered Restaurants": "Registered Restaurants",
+    "Master Admin Users": "Master Admin Users",
+    "Administrator Users": "Administrator Users",
+    "Collaborator Users": "Collaborator Users",
+    "Monthly Accesses": "Monthly Accesses",
+    "Accesses": "Accesses",
+    "No access data to display.": "No access data to display.",
+    "Actions by Restaurant": "Actions by Restaurant",
+    "Actions": "Actions",
+    "No action data to display.": "No action data to display.",
+    "Restaurants": "Restaurants",
+    "Master Users": "Master Users",
+    "Search by name or email...": "Search by name or email...",
+    "Register New Master User": "Register New Master User",
+    "Edit": "Edit",
+    "Register": "Register",
+    "Master User": "Master User",
+    "Modify the user information.": "Modify the user information.",
+    "Add a new master user to the system.": "Add a new master user to the system.",
+    "First Name(s)": "First Name(s)",
+    "e.g., Juan": "e.g., John",
+    "Last Names": "Last Names",
+    "e.g., Pérez García": "e.g., Smith Doe",
+    "Phone (will be the password)": "Phone (will be the password)",
+    "Minimum 6 digits": "Minimum 6 digits",
+    "Email": "Email",
+    "e.g., user@email.com": "e.g., user@email.com",
+    "I accept the": "I accept the",
+    "Terms and Conditions": "Terms and Conditions",
+    "and the": "and the",
+    "Privacy Policy": "Privacy Policy",
+    "Register Master User": "Register Master User",
+    "User Updated": "User Updated",
+    "The Master User '{{fullName}}' has been updated.": "The Master User '{{fullName}}' has been updated.",
+    "An error occurred while {{action}} the user.": "An error occurred while {{action}} the user.",
+    "updating": "updating",
+    "registering": "registering",
+    "This email is already in use.": "This email is already in use.",
+    "The password (phone) must be at least 6 characters long.": "The password (phone) must be at least 6 characters long.",
+    "The email format is invalid.": "The email format is invalid.",
+    "Username": "Username",
+    "Registration Date": "Registration Date",
+    "Open menu": "Open menu",
+    "Delete": "Delete",
+    "Are you sure?": "Are you sure?",
+    "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?",
+    "Yes, delete": "Yes, delete",
+    "User Deleted": "User Deleted",
+    "The user has been marked as inactive.": "The user has been marked as inactive.",
+    "Could not delete the user.": "Could not delete the user.",
+    "Loading users...": "Loading users...",
+    "No master users found.": "No master users found.",
+    "Register Restaurant": "Register Restaurant",
+    "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
+    "Go Back": "Go Back",
+    "Restaurant Information": "Restaurant Information",
+    "Restaurant Name": "Restaurant Name",
+    "e.g., Tacos El Sol": "e.g., Tacos El Sol",
+    "Social Reason": "Social Reason",
+    "e.g., Tacos El Sol S.A. de C.V.": "e.g., Tacos El Sol S.A. de C.V.",
+    "Style": "Style",
+    "Select a style": "Select a style",
+    "Address": "Address",
+    "e.g., Main St 123, Downtown": "e.g., Main St 123, Downtown",
+    "Municipality or City": "Municipality or City",
+    "e.g., Cuauhtémoc": "e.g., Cuauhtémoc",
+    "State": "State",
+    "Select a state": "Select a state",
+    "Contact Information (Administrator)": "Contact Information (Administrator)",
+    "Phone": "Phone",
+    "Email (will be the username)": "Email (will be the username)",
+    "RFC": "RFC",
+    "e.g., SOLT850101XXX": "e.g., SOLT850101XXX",
+    "Update Successful": "Update Successful",
+    "The information for restaurant '{{name}}' has been updated.": "The information for restaurant '{{name}}' has been updated.",
+    "Registration Successful": "Registration Successful",
+    "The restaurant '{{name}}' and its administrator user have been registered.": "The restaurant '{{name}}' and its administrator user have been registered.",
+    "Operation Error": "Operation Error",
+    "An error occurred during the operation.": "An error occurred during the operation.",
+    "The email is already in use by another administrator.": "The email is already in use by another administrator.",
+    "This email address is already in use.": "This email address is already in use.",
     "Billing & Subscription": "Billing & Subscription",
     "Manage your plan, view payment history, and see your account details.": "Manage your plan, view payment history, and see your account details.",
+    "Restaurant data could not be loaded.": "Restaurant data could not be loaded.",
+    "Unknown": "Unknown",
     "Subscription Details": "Subscription Details",
     "Active": "Active",
     "Inactive": "Inactive",
@@ -10,10 +132,8 @@
     "Plan Esencial": "Essential Plan",
     "Plan Pro": "Pro Plan",
     "Plan Ilimitado": "Unlimited Plan",
-    "Unknown": "Unknown",
     "Monthly Cost": "Monthly Cost",
     "+IVA": "+VAT",
-    "Registration Date": "Registration Date",
     "Next Payment Date": "Next Payment Date",
     "Upgrade or Change Plan": "Upgrade or Change Plan",
     "Payment History": "Payment History",
@@ -21,8 +141,29 @@
     "Amount": "Amount",
     "Status": "Status",
     "Invoice": "Invoice",
+    "Could not load payment history.": "Could not load payment history.",
     "Paid": "Paid",
-    "Download": "Download",
+    "No payment history found.": "No payment history found.",
     "Restaurant Details": "Restaurant Details",
-    "Restaurant data could not be loaded.": "Restaurant data could not be loaded."
-}
+    "Upgrade Your Plan": "Upgrade Your Plan",
+    "Choose the plan that best fits your restaurant's needs.": "Choose the plan that best fits your restaurant's needs.",
+    "Select a Plan": "Select a Plan",
+    "Ideal para restaurantes pequeños.": "Ideal for small restaurants.",
+    "Perfecto para negocios en crecimiento.": "Perfect for growing businesses.",
+    "Para restaurantes de gran volumen.": "For high-volume restaurants.",
+    "month": "month",
+    "Payment Information": "Payment Information",
+    "This is a simulated payment form for demonstration purposes.": "This is a simulated payment form for demonstration purposes.",
+    "Card Number": "Card Number",
+    "Expiry Date": "Expiry Date",
+    "CVC": "CVC",
+    "Order Summary": "Order Summary",
+    "Selected Plan": "Selected Plan",
+    "Subtotal": "Subtotal",
+    "IVA": "VAT",
+    "Total": "Total",
+    "Confirm and Pay": "Confirm and Pay",
+    "Upgrade Successful!": "Upgrade Successful!",
+    "Your plan has been upgraded to {{planName}}.": "Your plan has been upgraded to {{planName}}.",
+    "There was a problem upgrading your plan.": "There was a problem upgrading your plan."
+  }
