--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,7 +1,132 @@
+
 {
+    "Dine-in": "En Restaurante",
+    "Takeout": "Para Llevar",
+    "Dashboard": "Dashboard",
+    "Orders": "Órdenes",
+    "Menu & Recipes": "Menú y Recetas",
+    "Staff": "Personal",
+    "Inventory": "Inventario",
+    "Kitchen": "Cocina",
+    "Reports": "Reportes",
+    "Digital Map": "Mapa Digital",
+    "Settings": "Configuración",
     "Billing": "Facturación",
+    "Toggle navigation menu": "Alternar menú de navegación",
+    "Toggle user menu": "Alternar menú de usuario",
+    "My Account": "Mi Cuenta",
+    "Theme": "Tema",
+    "Light": "Claro",
+    "Dark": "Oscuro",
+    "System": "Sistema",
+    "Language": "Idioma",
+    "Change Password": "Cambiar Contraseña",
+    "Log out": "Cerrar Sesión",
+    "Enter your new password below. After saving, you will be logged out for security.": "Introduce tu nueva contraseña. Después de guardarla, se cerrará tu sesión por seguridad.",
+    "New Password": "Nueva Contraseña",
+    "Confirm Password": "Confirmar Contraseña",
+    "Cancel": "Cancelar",
+    "Save Changes": "Guardar Cambios",
+    "Error": "Error",
+    "Passwords do not match.": "Las contraseñas no coinciden.",
+    "Password must be at least 6 characters long.": "La contraseña debe tener al menos 6 caracteres.",
+    "Success": "Éxito",
+    "Password updated successfully.": "Contraseña actualizada correctamente.",
+    "Error updating password": "Error al actualizar la contraseña",
+    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "Esta operación es sensible y requiere autenticación reciente. Por favor, cierra sesión y vuelve a iniciarla para cambiar tu contraseña.",
+    "Administrator Dashboard": "Panel de Administrador",
+    "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
+    "Modules": "Módulos",
+    "Master Admin Dashboard": "Dashboard de Administrador Maestro",
+    "Welcome to the Tlacualli main control panel.": "Bienvenido al panel de control principal de Tlacualli.",
+    "Registered Restaurants": "Restaurantes Registrados",
+    "Master Admin Users": "Usuarios Admin. Maestro",
+    "Administrator Users": "Usuarios Administradores",
+    "Collaborator Users": "Usuarios Colaboradores",
+    "Monthly Accesses": "Accesos Mensuales",
+    "Accesses": "Accesos",
+    "No access data to display.": "No hay datos de acceso para mostrar.",
+    "Actions by Restaurant": "Acciones por Restaurante",
+    "Actions": "Acciones",
+    "No action data to display.": "No hay datos de acciones para mostrar.",
+    "Restaurants": "Restaurantes",
+    "Master Users": "Usuarios Maestros",
+    "Search by name or email...": "Buscar por nombre o correo...",
+    "Register New Master User": "Registrar Nuevo Usuario Maestro",
+    "Edit": "Editar",
+    "Register": "Registrar",
+    "Master User": "Usuario Maestro",
+    "Modify the user information.": "Modificar la información del usuario.",
+    "Add a new master user to the system.": "Añadir un nuevo usuario maestro al sistema.",
+    "First Name(s)": "Nombre(s)",
+    "e.g., Juan": "ej., Juan",
+    "Last Names": "Apellidos",
+    "e.g., Pérez García": "ej., Pérez García",
+    "Phone (will be the password)": "Teléfono (será la contraseña)",
+    "Minimum 6 digits": "Mínimo 6 dígitos",
+    "Email": "Correo Electrónico",
+    "e.g., user@email.com": "ej., usuario@correo.com",
+    "I accept the": "Acepto los",
+    "Terms and Conditions": "Términos y Condiciones",
+_END_OF_TRANSLATIONS_
+    "and the": "y el",
+    "Privacy Policy": "Aviso de Privacidad",
+    "Register Master User": "Registrar Usuario Maestro",
+    "User Updated": "Usuario Actualizado",
+    "The Master User '{{fullName}}' has been updated.": "El Usuario Maestro '{{fullName}}' ha sido actualizado.",
+_END_OF_TRANSLATIONS_
+    "An error occurred while {{action}} the user.": "Ocurrió un error al {{action}} el usuario.",
+    "updating": "actualizar",
+    "registering": "registrar",
+    "This email is already in use.": "Este correo ya está en uso.",
+    "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
+    "The email format is invalid.": "El formato del correo es inválido.",
+    "Username": "Nombre de Usuario",
+    "Registration Date": "Fecha de Registro",
+    "Open menu": "Abrir menú",
+    "Delete": "Eliminar",
+    "Are you sure?": "¿Estás seguro?",
+    "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "Esta acción marcará al usuario como inactivo y no podrá acceder al sistema. ¿Deseas continuar?",
+    "Yes, delete": "Sí, eliminar",
+    "User Deleted": "Usuario Eliminado",
+    "The user has been marked as inactive.": "El usuario ha sido marcado como inactivo.",
+_END_OF_TRANSLATIONS_
+    "Could not delete the user.": "No se pudo eliminar el usuario.",
+    "Loading users...": "Cargando usuarios...",
+    "No master users found.": "No se encontraron usuarios maestros.",
+    "Register Restaurant": "Registrar Restaurante",
+    "Add a new restaurant and its administrator to the system.": "Añade un nuevo restaurante y su administrador al sistema.",
+_END_OF_TRANSLATIONS_
+    "Restaurant Information": "Información del Restaurante",
+    "Restaurant Name": "Nombre del Restaurante",
+    "e.g., Tacos El Sol": "ej., Tacos El Sol",
+    "Social Reason": "Razón Social",
+    "e.g., Tacos El Sol S.A. de C.V.": "ej., Tacos El Sol S.A. de C.V.",
+    "Style": "Estilo",
+    "Select a style": "Selecciona un estilo",
+    "Address": "Dirección",
+    "e.g., Main St 123, Downtown": "ej., Calle Principal 123, Centro",
+    "Municipality or City": "Municipio o Ciudad",
+    "e.g., Cuauhtémoc": "ej., Cuauhtémoc",
+    "State": "Estado",
+    "Select a state": "Selecciona un estado",
+    "Contact Information (Administrator)": "Información de Contacto (Administrador)",
+    "Phone": "Teléfono",
+    "Email (will be the username)": "Correo (será el usuario)",
+    "RFC": "RFC",
+    "e.g., SOLT850101XXX": "ej., SOLT850101XXX",
+    "Update Successful": "Actualización Exitosa",
+    "The information for restaurant '{{name}}' has been updated.": "La información del restaurante '{{name}}' ha sido actualizada.",
+    "Registration Successful": "Registro Exitoso",
+    "The restaurant '{{name}}' and its administrator user have been registered.": "El restaurante '{{name}}' y su usuario administrador han sido registrados.",
+    "Operation Error": "Error en la Operación",
+    "An error occurred during the operation.": "Ocurrió un error durante la operación.",
+    "The email is already in use by another administrator.": "El correo ya está en uso por otro administrador.",
+    "This email address is already in use.": "Esta dirección de correo ya está en uso.",
     "Billing & Subscription": "Facturación y Suscripción",
-    "Manage your plan, view payment history, and see your account details.": "Gestiona tu plan, ve tu historial de pagos y consulta los detalles de tu cuenta.",
+    "Manage your plan, view payment history, and see your account details.": "Gestiona tu plan, ve tu historial de pagos y los detalles de tu cuenta.",
+    "Restaurant data could not be loaded.": "No se pudieron cargar los datos del restaurante.",
+    "Unknown": "Desconocido",
     "Subscription Details": "Detalles de la Suscripción",
     "Active": "Activo",
     "Inactive": "Inactivo",
@@ -10,10 +135,8 @@
     "Plan Esencial": "Plan Esencial",
     "Plan Pro": "Plan Pro",
     "Plan Ilimitado": "Plan Ilimitado",
-    "Unknown": "Desconocido",
     "Monthly Cost": "Costo Mensual",
     "+IVA": "+IVA",
-    "Registration Date": "Fecha de Registro",
     "Next Payment Date": "Próxima Fecha de Pago",
     "Upgrade or Change Plan": "Actualizar o Cambiar de Plan",
     "Payment History": "Historial de Pagos",
@@ -21,8 +144,28 @@
     "Amount": "Monto",
     "Status": "Estado",
     "Invoice": "Factura",
+    "Could not load payment history.": "No se pudo cargar el historial de pagos.",
     "Paid": "Pagado",
-    "Download": "Descargar",
+    "No payment history found.": "No se encontró historial de pagos.",
     "Restaurant Details": "Detalles del Restaurante",
-    "Restaurant data could not be loaded.": "No se pudieron cargar los datos del restaurante."
-}
+    "Upgrade Your Plan": "Actualiza Tu Plan",
+    "Choose the plan that best fits your restaurant's needs.": "Elige el plan que mejor se adapte a las necesidades de tu restaurante.",
+    "Go Back": "Regresar",
+    "Select a Plan": "Selecciona un Plan",
+    "Ideal para restaurantes pequeños.": "Ideal para restaurantes pequeños.",
+    "Perfecto para negocios en crecimiento.": "Perfecto para negocios en crecimiento.",
+    "Para restaurantes de gran volumen.": "Para restaurantes de gran volumen.",
+    "month": "mes",
+    "Payment Information": "Información de Pago",
+    "This is a simulated payment form for demonstration purposes.": "Este es un formulario de pago simulado para fines de demostración.",
+    "Card Number": "Número de Tarjeta",
+    "Expiry Date": "Fecha de Vencimiento",
+    "Order Summary": "Resumen del Pedido",
+    "Selected Plan": "Plan Seleccionado",
+    "Subtotal": "Subtotal",
+    "Total": "Total",
+    "Confirm and Pay": "Confirmar y Pagar",
+    "Upgrade Successful!": "¡Actualización Exitosa!",
+    "Your plan has been upgraded to {{planName}}.": "Tu plan ha sido actualizado a {{planName}}.",
+    "There was a problem upgrading your plan.": "Hubo un problema al actualizar tu plan."
+  }
