en /dashboard-am verifica las traducciones a español en los archivos de

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,171 +1,191 @@
-
 {
-    "Dine-in": "En Restaurante",
-    "Takeout": "Para Llevar",
-    "Dashboard": "Dashboard",
-    "Orders": "Órdenes",
-    "Menu & Recipes": "Menú y Recetas",
-    "Staff": "Personal",
-    "Inventory": "Inventario",
-    "Kitchen": "Cocina",
-    "Reports": "Reportes",
-    "Digital Map": "Mapa Digital",
-    "Settings": "Configuración",
-    "Billing": "Facturación",
-    "Toggle navigation menu": "Alternar menú de navegación",
-    "Toggle user menu": "Alternar menú de usuario",
-    "My Account": "Mi Cuenta",
-    "Theme": "Tema",
-    "Light": "Claro",
-    "Dark": "Oscuro",
-    "System": "Sistema",
-    "Language": "Idioma",
-    "Change Password": "Cambiar Contraseña",
-    "Log out": "Cerrar Sesión",
-    "Enter your new password below. After saving, you will be logged out for security.": "Introduce tu nueva contraseña. Después de guardarla, se cerrará tu sesión por seguridad.",
-    "New Password": "Nueva Contraseña",
-    "Confirm Password": "Confirmar Contraseña",
-    "Cancel": "Cancelar",
-    "Save Changes": "Guardar Cambios",
-    "Error": "Error",
-    "Passwords do not match.": "Las contraseñas no coinciden.",
-    "Password must be at least 6 characters long.": "La contraseña debe tener al menos 6 caracteres.",
-    "Success": "Éxito",
-    "Password updated successfully.": "Contraseña actualizada correctamente.",
-    "Error updating password": "Error al actualizar la contraseña",
-    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "Esta operación es sensible y requiere autenticación reciente. Por favor, cierra sesión y vuelve a iniciarla para cambiar tu contraseña.",
-    "Administrator Dashboard": "Panel de Administrador",
-    "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
-    "Modules": "Módulos",
-    "Master Admin Dashboard": "Dashboard de Administrador Maestro",
-    "Welcome to the Tlacualli main control panel.": "Bienvenido al panel de control principal de Tlacualli.",
-    "Registered Restaurants": "Restaurantes Registrados",
-    "Master Admin Users": "Usuarios Admin. Maestro",
-    "Administrator Users": "Usuarios Administradores",
-    "Collaborator Users": "Usuarios Colaboradores",
-    "Monthly Accesses": "Accesos Mensuales",
-    "Accesses": "Accesos",
-    "No access data to display.": "No hay datos de acceso para mostrar.",
-    "Actions by Restaurant": "Acciones por Restaurante",
-    "Actions": "Acciones",
-    "No action data to display.": "No hay datos de acciones para mostrar.",
-    "Restaurants": "Restaurantes",
-    "Master Users": "Usuarios Maestros",
-    "Search by name or email...": "Buscar por nombre o correo...",
-    "Register New Master User": "Registrar Nuevo Usuario Maestro",
-    "Edit": "Editar",
-    "Register": "Registrar",
-    "Master User": "Usuario Maestro",
-    "Modify the user information.": "Modificar la información del usuario.",
-    "Add a new master user to the system.": "Añadir un nuevo usuario maestro al sistema.",
-    "First Name(s)": "Nombre(s)",
-    "e.g., Juan": "ej., Juan",
-    "Last Names": "Apellidos",
-    "e.g., Pérez García": "ej., Pérez García",
-    "Phone (will be the password)": "Teléfono (será la contraseña)",
-    "Minimum 6 digits": "Mínimo 6 dígitos",
-    "Email": "Correo Electrónico",
-    "e.g., user@email.com": "ej., usuario@correo.com",
-    "I accept the": "Acepto los",
-    "Terms and Conditions": "Términos y Condiciones",
-_END_OF_TRANSLATIONS_
-    "and the": "y el",
-    "Privacy Policy": "Aviso de Privacidad",
-    "Register Master User": "Registrar Usuario Maestro",
-    "User Updated": "Usuario Actualizado",
-    "The Master User '{{fullName}}' has been updated.": "El Usuario Maestro '{{fullName}}' ha sido actualizado.",
-_END_OF_TRANSLATIONS_
-    "An error occurred while {{action}} the user.": "Ocurrió un error al {{action}} el usuario.",
-    "updating": "actualizar",
-    "registering": "registrar",
-    "This email is already in use.": "Este correo ya está en uso.",
-    "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
-    "The email format is invalid.": "El formato del correo es inválido.",
-    "Username": "Nombre de Usuario",
-    "Registration Date": "Fecha de Registro",
-    "Open menu": "Abrir menú",
-    "Delete": "Eliminar",
-    "Are you sure?": "¿Estás seguro?",
-    "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "Esta acción marcará al usuario como inactivo y no podrá acceder al sistema. ¿Deseas continuar?",
-    "Yes, delete": "Sí, eliminar",
-    "User Deleted": "Usuario Eliminado",
-    "The user has been marked as inactive.": "El usuario ha sido marcado como inactivo.",
-_END_OF_TRANSLATIONS_
-    "Could not delete the user.": "No se pudo eliminar el usuario.",
-    "Loading users...": "Cargando usuarios...",
-    "No master users found.": "No se encontraron usuarios maestros.",
-    "Register Restaurant": "Registrar Restaurante",
-    "Add a new restaurant and its administrator to the system.": "Añade un nuevo restaurante y su administrador al sistema.",
-_END_OF_TRANSLATIONS_
-    "Restaurant Information": "Información del Restaurante",
-    "Restaurant Name": "Nombre del Restaurante",
-    "e.g., Tacos El Sol": "ej., Tacos El Sol",
-    "Social Reason": "Razón Social",
-    "e.g., Tacos El Sol S.A. de C.V.": "ej., Tacos El Sol S.A. de C.V.",
-    "Style": "Estilo",
-    "Select a style": "Selecciona un estilo",
-    "Address": "Dirección",
-    "e.g., Main St 123, Downtown": "ej., Calle Principal 123, Centro",
-    "Municipality or City": "Municipio o Ciudad",
-    "e.g., Cuauhtémoc": "ej., Cuauhtémoc",
-    "State": "Estado",
-    "Select a state": "Selecciona un estado",
-    "Contact Information (Administrator)": "Información de Contacto (Administrador)",
-    "Phone": "Teléfono",
-    "Email (will be the username)": "Correo (será el usuario)",
-    "RFC": "RFC",
-    "e.g., SOLT850101XXX": "ej., SOLT850101XXX",
-    "Update Successful": "Actualización Exitosa",
-    "The information for restaurant '{{name}}' has been updated.": "La información del restaurante '{{name}}' ha sido actualizada.",
-    "Registration Successful": "Registro Exitoso",
-    "The restaurant '{{name}}' and its administrator user have been registered.": "El restaurante '{{name}}' y su usuario administrador han sido registrados.",
-    "Operation Error": "Error en la Operación",
-    "An error occurred during the operation.": "Ocurrió un error durante la operación.",
-    "The email is already in use by another administrator.": "El correo ya está en uso por otro administrador.",
-    "This email address is already in use.": "Esta dirección de correo ya está en uso.",
-    "Billing & Subscription": "Facturación y Suscripción",
-    "Manage your plan, view payment history, and see your account details.": "Gestiona tu plan, ve tu historial de pagos y los detalles de tu cuenta.",
-    "Restaurant data could not be loaded.": "No se pudieron cargar los datos del restaurante.",
-    "Unknown": "Desconocido",
-    "Subscription Details": "Detalles de la Suscripción",
-    "Active": "Activo",
-    "Inactive": "Inactivo",
-    "Current Plan": "Plan Actual",
-    "Demo Gratuita": "Demo Gratuita",
-    "Plan Esencial": "Plan Esencial",
-    "Plan Pro": "Plan Pro",
-    "Plan Ilimitado": "Plan Ilimitado",
-    "Monthly Cost": "Costo Mensual",
-    "+IVA": "+IVA",
-    "Next Payment Date": "Próxima Fecha de Pago",
-    "Upgrade or Change Plan": "Actualizar o Cambiar de Plan",
-    "Payment History": "Historial de Pagos",
-    "Date": "Fecha",
-    "Amount": "Monto",
-    "Status": "Estado",
-    "Invoice": "Factura",
-    "Could not load payment history.": "No se pudo cargar el historial de pagos.",
-    "Paid": "Pagado",
-    "No payment history found.": "No se encontró historial de pagos.",
-    "Restaurant Details": "Detalles del Restaurante",
-    "Upgrade Your Plan": "Actualiza Tu Plan",
-    "Choose the plan that best fits your restaurant's needs.": "Elige el plan que mejor se adapte a las necesidades de tu restaurante.",
-    "Go Back": "Regresar",
-    "Select a Plan": "Selecciona un Plan",
-    "Ideal para restaurantes pequeños.": "Ideal para restaurantes pequeños.",
-    "Perfecto para negocios en crecimiento.": "Perfecto para negocios en crecimiento.",
-    "Para restaurantes de gran volumen.": "Para restaurantes de gran volumen.",
-    "month": "mes",
-    "Payment Information": "Información de Pago",
-    "This is a simulated payment form for demonstration purposes.": "Este es un formulario de pago simulado para fines de demostración.",
-    "Card Number": "Número de Tarjeta",
-    "Expiry Date": "Fecha de Vencimiento",
-    "Order Summary": "Resumen del Pedido",
-    "Selected Plan": "Plan Seleccionado",
-    "Subtotal": "Subtotal",
-    "Total": "Total",
-    "Confirm and Pay": "Confirmar y Pagar",
-    "Upgrade Successful!": "¡Actualización Exitosa!",
-    "Your plan has been upgraded to {{planName}}.": "Tu plan ha sido actualizado a {{planName}}.",
-    "There was a problem upgrading your plan.": "Hubo un problema al actualizar tu plan."
-  }
+  "Master Admin Dashboard": "Panel de Administrador Maestro",
+  "Welcome to the Tlacualli main control panel.": "Bienvenido al panel de control principal de Tlacualli.",
+  "Registered Restaurants": "Restaurantes Registrados",
+  "Master Admin Users": "Usuarios Administradores Maestros",
+  "Administrator Users": "Usuarios Administradores",
+  "Collaborator Users": "Usuarios Colaboradores",
+  "Monthly Accesses": "Accesos Mensuales",
+  "Actions by Restaurant": "Acciones por Restaurante",
+  "Restaurants": "Restaurantes",
+  "Master Users": "Usuarios Maestros",
+  "Accesses": "Accesos",
+  "ID": "ID",
+  "No access data to display.": "No hay datos de acceso para mostrar.",
+  "No action data to display.": "No hay datos de acciones para mostrar.",
+  "Register Restaurant": "Registrar Restaurante",
+  "Add a new restaurant and its administrator to the system.": "Añade un nuevo restaurante y su administrador al sistema.",
+  "Go Back": "Regresar",
+  "Restaurant Information": "Información del Restaurante",
+  "First Name(s)": "Nombre(s)",
+  "e.g., Juan": "ej. Juan",
+  "Last Names": "Apellidos",
+  "e.g., Pérez García": "ej. Pérez García",
+  "Phone": "Teléfono",
+  "Phone (will be the password)": "Teléfono (será la contraseña)",
+  "Minimum 6 digits": "Mínimo 6 dígitos",
+  "Email": "Correo Electrónico",
+  "Email (will be the username)": "Email (será el usuario)",
+  "e.g., user@email.com": "ej. usuario@correo.com",
+  "Save Changes": "Guardar Cambios",
+  "Register Master User": "Registrar Usuario Maestro",
+  "User Updated": "Usuario Actualizado",
+  "The Master User '{{fullName}}' has been updated.": "El Usuario Maestro '{{fullName}}' ha sido actualizado.",
+  "Master User Registered": "Usuario Maestro Registrado",
+  "The Master User '{{fullName}}' has been successfully registered.": "El Usuario Maestro '{{fullName}}' ha sido registrado con éxito.",
+  "An error occurred while {{action}} the user.": "Ocurrió un error al {{action}} el usuario.",
+  "updating": "actualizar",
+  "registering": "registrar",
+  "This email is already in use.": "Este correo electrónico ya está en uso.",
+  "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
+  "The email format is invalid.": "El formato del correo electrónico es inválido.",
+  "Error": "Error",
+  "I accept the": "Acepto los",
+  "Terms and Conditions": "Términos y Condiciones",
+  "and the": "y el",
+  "Privacy Policy": "Aviso de Privacidad",
+  "Search by name or email...": "Buscar por nombre o correo...",
+  "Register New Master User": "Registrar Nuevo Usuario Maestro",
+  "Edit": "Editar",
+  "Register": "Registrar",
+  "Master User": "Usuario Maestro",
+  "Modify the user information.": "Modifica la información del usuario.",
+  "Add a new master user to the system.": "Añade un nuevo usuario maestro al sistema.",
+  "Username": "Nombre de Usuario",
+  "Registration Date": "Fecha de Registro",
+  "Actions": "Acciones",
+  "Loading users...": "Cargando usuarios...",
+  "Not specified": "No especificado",
+  "Open menu": "Abrir menú",
+  "Delete": "Eliminar",
+  "Are you sure?": "¿Estás seguro?",
+  "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "Esta acción marcará al usuario como inactivo y no podrá acceder al sistema. ¿Desea continuar?",
+  "Cancel": "Cancelar",
+  "Yes, delete": "Sí, eliminar",
+  "User Deleted": "Usuario Eliminado",
+  "The user has been marked as inactive.": "El usuario ha sido marcado como inactivo.",
+  "Could not delete the user.": "No se pudo eliminar el usuario.",
+  "No master users found.": "No se encontraron usuarios maestros.",
+  "Restaurant Name": "Nombre del Restaurante",
+  "e.g., Tacos El Sol": "ej. Tacos El Sol",
+  "Social Reason": "Razón Social",
+  "e.g., Tacos El Sol S.A. de C.V.": "ej. Tacos El Sol S.A. de C.V.",
+  "Style": "Giro",
+  "Select a style": "Selecciona un giro",
+  "Italiano": "Italiano",
+  "Mar y tierra": "Mar y tierra",
+  "Carnes": "Carnes",
+  "Mariscos": "Mariscos",
+  "Mexicano": "Mexicano",
+  "Japonés": "Japonés",
+  "Otro": "Otro",
+  "Address": "Dirección",
+  "e.g., Main St 123, Downtown": "ej. Calle Principal 123, Centro",
+  "Municipality or City": "Municipio o Delegación",
+  "e.g., Cuauhtémoc": "ej. Cuauhtémoc",
+  "State": "Estado",
+  "Select a state": "Selecciona un estado",
+  "Contact Information (Administrator)": "Información de Contacto (Administrador)",
+  "e.g., admin@tacoselsol.com": "ej. admin@tacoselsol.com",
+  "RFC": "RFC",
+  "e.g., SOLT850101XXX": "ej. SOLT850101XXX",
+  "Update Successful": "Actualización Exitosa",
+  "The information for restaurant '{{name}}' has been updated.": "La información del restaurante '{{name}}' ha sido actualizada.",
+  "Registration Successful": "Registro Exitoso",
+  "The restaurant '{{name}}' and its administrator user have been registered.": "El restaurante '{{name}}' y su usuario administrador han sido registrados.",
+  "An error occurred during the operation.": "Ocurrió un error durante la operación.",
+  "The email is already in use by another administrator.": "El correo ya está en uso por otro administrador.",
+  "Operation Error": "Error en la Operación",
+  "Register Restaurant": "Registrar Restaurante",
+  "Search by name...": "Buscar por nombre...",
+  "Filters": "Filtros",
+  "Filter by State": "Filtrar por Estado",
+  "Filter by Plan": "Filtrar por Plan",
+  "Demo Gratuita": "Demo Gratuita",
+  "Plan Esencial": "Plan Esencial",
+  "Plan Pro": "Plan Pro",
+  "Plan Ilimitado": "Plan Ilimitado",
+  "Filter by Status": "Filtrar por Estado",
+  "Active": "Activo",
+  "Inactive": "Inactivo",
+  "Modify the restaurant information.": "Modifica la información del restaurante.",
+  "Migrate Plan for": "Migrar Plan para",
+  "Select the new plan for this restaurant. This action will move all its data to the production environment.": "Selecciona el nuevo plan para este restaurante. Esta acción moverá todos sus datos al entorno de producción.",
+  "New Plan": "Nuevo Plan",
+  "Select a plan": "Selecciona un plan",
+  "Migrate Now": "Migrar Ahora",
+  "Send Email to": "Enviar Correo a",
+  "To": "Para",
+  "Subject": "Asunto",
+  "Message": "Mensaje",
+  "Please fill in all fields.": "Por favor, llena todos los campos.",
+  "Send Email": "Enviar Correo",
+  "Name": "Nombre",
+  "Plan": "Plan",
+  "Demo Status": "Estado de Demo",
+  "Status": "Estatus",
+  "Loading restaurants...": "Cargando restaurantes...",
+  "Send Email": "Enviar Correo",
+  "Deactivate": "Desactivar",
+  "Activate": "Activar",
+  "Migrate Plan": "Migrar Plan",
+  "This action will mark the restaurant as deleted and it will no longer appear. Do you want to continue?": "Esta acción marcará el restaurante como eliminado y ya no aparecerá. ¿Deseas continuar?",
+  "Current": "Vigente",
+  "Expired": "Expirada",
+  "days": "días",
+  "N/A": "N/A",
+  "Status Updated": "Estado Actualizado",
+  "The restaurant has been {{status}}.": "El restaurante ha sido {{status}}.",
+  "activated": "activado",
+  "deactivated": "desactivado",
+  "Could not update restaurant status.": "No se pudo actualizar el estado del restaurante.",
+  "Migration Successful": "Migración Exitosa",
+  "{{restaurantName}} has been migrated to {{planName}}.": "{{restaurantName}} ha sido migrado al {{planName}}.",
+  "Migration Failed": "Falló la Migración",
+  "An error occurred during migration. Check logs for details.": "Ocurrió un error durante la migración. Revisa los registros para más detalles.",
+  "Email Sent": "Correo Enviado",
+  "The email has been sent successfully.": "El correo ha sido enviado con éxito.",
+  "Failed to send email.": "Error al enviar el correo.",
+  "Restaurant Deleted": "Restaurante Eliminado",
+  "The restaurant has been marked as deleted.": "El restaurante ha sido marcado como eliminado.",
+  "Could not delete the restaurant.": "No se pudo eliminar el restaurante.",
+  "No restaurants found.": "No se encontraron restaurantes.",
+  "Contact Information": "Información de Contacto",
+  "Plan & Billing": "Plan y Facturación",
+  "Current Plan": "Plan Actual",
+  "Last Payment": "Último Pago",
+  "Next Payment": "Siguiente Pago",
+  "Daily Access": "Acceso Diario",
+  "Total": "Total",
+  "Welcome back, {{name}}!": "¡Bienvenido de vuelta, {{name}}!",
+  "LOG IN": "INICIAR SESIÓN",
+  "User (email)": "Usuario (email)",
+  "Password": "Contraseña",
+  "Remember me": "Recordarme",
+  "Forgot your password?": "¿Olvidaste tu contraseña?",
+  "Login Failed": "Falló el Inicio de Sesión",
+  "Invalid credentials or connection error. Please try again.": "Credenciales inválidas o error de conexión. Por favor, intenta de nuevo.",
+  "The email or password are incorrect.": "El correo o la contraseña son incorrectos.",
+  "The user is not active or does not have permissions.": "El usuario no está activo o no tiene permisos.",
+  "The restaurant this user belongs to is not active.": "El restaurante al que pertenece este usuario no está activo.",
+  "The associated restaurant could not be found.": "No se pudo encontrar el restaurante asociado.",
+  "Unrecognized user profile or invalid status.": "Perfil de usuario no reconocido o estado inválido.",
+  "Email required": "Email requerido",
+  "Please enter your email to reset your password.": "Por favor, introduce tu correo para restablecer tu contraseña.",
+  "Recovery email sent": "Correo de recuperación enviado",
+  "Check your inbox to reset your password.": "Revisa tu bandeja de entrada para restablecer tu contraseña.",
+  "Could not send recovery email. Please try again.": "No se pudo enviar el correo de recuperación. Por favor, intenta de nuevo.",
+  "No user found with that email address.": "No se encontró ningún usuario con esa dirección de correo.",
+  "Periodo de Prueba Finalizado": "Periodo de Prueba Finalizado",
+  "Tu periodo de prueba de 15 días ha expirado. Por favor, elige un plan para continuar usando Tlacualli.": "Tu periodo de prueba de 15 días ha expirado. Por favor, elige un plan para continuar usando Tlacualli.",
+  "¡Bienvenido a tu Demo!": "¡Bienvenido a tu Demo!",
+  "Te quedan {{count}} días de tu prueba gratuita. ¡Disfrútalos!": "Te quedan {{count}} días de tu prueba gratuita. ¡Disfrútalos!",
+  "Ver Planes": "Ver Planes",
+  "Continuar al Dashboard": "Continuar al Dashboard",
+  "Login Successful": "Inicio de Sesión Exitoso",
+  "All Statuses": "Todos los Estatus",
+  "Paid": "Pagado",
+  "Served": "Servido",
+  "Cancelled": "Cancelado",
+  "Open": "Abierto"
+}
